--- a/public/js/index.html
+++ b/public/js/index.html
@@ -54,8 +54,8 @@
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>    
+    <script src="./script copy.js"></script>
 </body>
 
 </html>
